# Used-Car-Price-Prediction

./: README.md  main.py  pyproject.toml
notebooks/: 01_eda.ipynb  eda_and_experiments.ipynb
